--- a/package.json
+++ b/package.json
@@ -19,6 +19,8 @@
     "node-fetch": "^2.2.0",
     "prepend": "^1.0.2",
     "pusher": "^2.1.3",
-    "request": "^2.88.0"
+    "request": "^2.88.0",
+    "swipl": "^1.0.3",
+    "swipl-stdio": "^1.0.3"
   }
 }
